màj de la partie front

--- a/public/Pages/Evenements/unEvenement.html
+++ b/public/Pages/Evenements/unEvenement.html
@@ -25,13 +25,13 @@
                         WR !
                     </p>
                 </span>
-                <span id="gameGenre">
+                <span id="eventGenre">
                     <p><strong>Genre :</strong> Action / RPG / Science-fiction</p>
                 </span>
-                <span id="gamePlatform">
+                <span id="eventPlatform">
                     <p class="fs-3"><strong>Plateforme :</strong> PC / GS5 / Zbox Series alpha</p>
                 </span>
-                <span id="gameDescription">
+                <span id="eventGame">
                     <p><strong>Le jeu :</strong> Dans un futur lointain ravagé par la guerre entre humains et
                         intelligences
                         artificielles, NeaR Machinica vous plonge au cœur d’un conflit où la frontière entre l’homme et
