--- a/public/Pages/contact.html
+++ b/public/Pages/contact.html
@@ -1,7 +1,7 @@
 <!--Carousel-->
-<div class="d-flex justify-content-center mx-auto mt-3 w-100">
+<div class="bloc" aria-labelledby="home-title">
 
-    <div id="carouselExampleContact" class="carousel slide">
+    <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner rounded-4">
             <div class="carousel-item active">
                 <img src="/Images/images accueil/groupe_jouant.jpg" class="carousel-img d-block w-100"
@@ -13,19 +13,19 @@
             </div>
             <div class="carousel-item">
                 <img src="/Images/images accueil/solo_joueur.jpg" class="carousel-img d-block w-100"
-                    style="object-position: center center;" alt="Un joueur solo">
+                    style="object-position: center 30%;" alt="Un joueur solo">
             </div>
             <div class="carousel-item">
                 <img src="/Images/images accueil/solo_multiécran.jpg" class="carousel-img d-block w-100"
                     alt="Un joueur seul devant un dispositif d'écrans">
             </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleContact"
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
             data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleContact"
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
             data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
