--- a/public/Pages/home.html
+++ b/public/Pages/home.html
@@ -18,7 +18,7 @@
             </div>
             <div class="carousel-item">
                 <img src="/Images/images accueil/solo_joueur.jpg" class="carousel-img d-block w-100"
-                    style="object-position: center center;" alt="Un joueur solo">
+                    style="object-position: center 30%;" alt="Un joueur solo">
             </div>
             <div class="carousel-item">
                 <img src="/Images/images accueil/solo_multiécran.jpg" class="carousel-img d-block w-100"
