--- a/public/index.html
+++ b/public/index.html
@@ -18,38 +18,39 @@
 
 </head>
 
-<body class="bg-black">
+<body>
     <header>
         <nav class="navbar navbar-expand-lg" data-bs-theme="dark">
             <div class="container-fluid">
 
+                <!--Logo-Lien-->
                 <a class="navbar-brand fs-1 fw-bold" href="/contact" onclick="window.route(event)">ESPORTIFY</a>
 
+                <!--Bouton Menu Burger-->
                 <button class="navbar-toggler rounded-3" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <div class="collapse navbar-collapse bg-dark" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-5 mb-lg-0">
+                <!--Menu responsive-->
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link fs-2 text-secondary pe-4" href="/">Accueil</a>
+                            <a class="nav-link" href="/">Accueil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link fs-2 text-secondary pe-4" href="/monProfil" data-show="connected"
+                            <a class="nav-link" href="/monProfil" data-show="connected"
                                 onclick="window.route(event)">Profil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link fs-2 text-secondary pe-4" href="/connexion" data-show="disconnected"
+                            <a class="nav-link" href="/connexion" data-show="disconnected"
                                 onclick="window.route(event)">Connexion</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link fs-2 text-secondary pe-4" href="/rechercheEvenements"
+                            <a class="nav-link" href="/rechercheEvenements"
                                 onclick="window.route(event)">Évènements</a>
                         </li>
-                    </ul>
-                    </li>
                     </ul>
                 </div>
             </div>
