--- a/public/Pages/inscription.html
+++ b/public/Pages/inscription.html
@@ -1,4 +1,4 @@
-<div class="container w-40 mx-auto">
+<div class="bloc container w-40 mx-auto">
     <form>
         <!--Nom de profil-->
         <div class="mb-3 w-50 mx-auto">
@@ -31,14 +31,8 @@
             </div>
         </div>
 
-        <!--Image de profil-->
-        <div class="mb-3">
-            <label for="image" class="form-label">Image de l'événement :</label>
-            <input type="file" id="image" name="image" accept="image/*" required>
-        </div>
-
         <div class="text-center">
-            <button type="submit" class="btn btn-primary">Inscription</button>
+            <button type="button" class="btn btn-primary" id="btn-valid-inscription">Inscription</button>
         </div>
     </form>
 </div>
