--- a/public/Pages/connexion.html
+++ b/public/Pages/connexion.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="bloc container">
   <form>
       <div class="mb-3 w-50 mx-auto">
         <label for="emailInput" class="form-label">Email</label>
