--- a/public/Pages/rechercheEvenements.html
+++ b/public/Pages/rechercheEvenements.html
@@ -1,5 +1,5 @@
 <!--Recherche-->
-<div class="d-flex flex-wrap justify-content-center gap-3 mb-5">
+<div class="bloc d-flex flex-wrap justify-content-center gap-3 mb-5">
 
     <!-- Recherche par nom d'évènement -->
     <form id="searchEventName" class="d-flex flex-column flex-grow-1 flex-md-grow-0" role="search" aria-labelledby="id">
