ajout du fetch et suppression de champs inutiles

--- a/public/Pages/inscription.html
+++ b/public/Pages/inscription.html
@@ -9,14 +9,8 @@
 
         <!--Email-->
         <div class="mb-3 w-50 mx-auto">
-            <label for="emailInput" class="form-label">Email</label>
-            <input type="email" class="form-control" id="emailInput" placeholder="test@mail.fr" name="email">
-        </div>
-
-        <!--Date de naissance-->
-        <div class="mb-3 w-50 mx-auto">
-            <label for="birthDateInput" class="form-label">Date de naissance</label>
-            <input type="date" class="form-control" id="birthDateInput" name="birthDate">
+            <label for="mailInput" class="form-label">Email</label>
+            <input type="email" class="form-control" id="mailInput" placeholder="test@mail.fr" name="mail">
         </div>
 
         <!--MDP-->
@@ -30,15 +24,15 @@
                 <input type="password" class="form-control" id="validatePasswordInput" name="PasswordConfirm">
             </div>
         </div>
-
-        <div class="text-center">
-            <button type="button" class="btn btn-primary" id="btn-valid-inscription">Inscription</button>
-        </div>
     </form>
+
+    <div class="text-center">
+        <button type="button" class="btn btn-primary" id="btn-valid-inscription">Inscription</button>
+    </div>
+    
 </div>
 
 
 <div class="text-center pt-3">
     <a href="/connexion" onclick="window.route(event)">Vous avez déjà un compte ? Connectez-vous ici !</a>
-</div>
 </div>
