changement du champs mail en username

--- a/public/Pages/connexion.html
+++ b/public/Pages/connexion.html
@@ -1,8 +1,8 @@
 <div class="bloc container">
   <form>
       <div class="mb-3 w-50 mx-auto">
-        <label for="emailInput" class="form-label">Email</label>
-        <input type="email" class="form-control" id="emailInput" placeholder="test@mail.fr" name="Email">
+        <label for="usernameInput" class="form-label">Nom d'utilisateur</label>
+        <input type="text" class="form-control" id="usernameInput" placeholder="Votre nom d'utilisateur" name="Username">
       </div>
       <div class="mb-3 w-50 mx-auto">
         <label for="passwordInput" class="form-label">Mot de passe</label>
