suppression d'éléments inutiles

--- a/public/Pages/monProfil.html
+++ b/public/Pages/monProfil.html
@@ -1,24 +1,13 @@
 <div class="container">
-    <form>
+    
         <div class="mb-3">
             <label for="profilName" class="label"><strong>Nom de profil :</strong></label>
-            <span id="profilName">
-                <p>xXSuperProfilXx</p>
-            </span>
+            <p id="profilName"></p>
         </div>
 
         <div class="mb-3">
-            <label for="email" class="label"><strong>Adresse e-mail :</strong></label>
-            <span id="email">
-                <p>superprofil@example.com</p>
-            </span>
-        </div>
-
-        <div class="mb-3">
-            <label for="birthDate" class="label"><strong>Date de Naissance :</strong></label>
-            <span id="birthDate">
-                <p type="date">01/01/2000</p>
-            </span>
+            <label for="profilMail" class="label"><strong>Adresse e-mail :</strong></label>
+            <p id="profilMail"></p>
         </div>
 
         <div class="text-center mb-3">
@@ -28,7 +17,6 @@
         <div class="text-center">
             <button type="button" class="btn btn-danger" id="deleteAccountBtn">Supprimer mon compte</button>
         </div>
-    </form>
 
     <div class="text-center mt-5">
         <button type="button" class="btn btn-primary" id="signoutBtn">Déconnexion</button>
