--- a/public/Pages/monProfil.html
+++ b/public/Pages/monProfil.html
@@ -1,24 +1,33 @@
 <div class="container">
-    
-        <div class="mb-3">
-            <label for="profilName" class="label"><strong>Nom de profil :</strong></label>
-            <p id="profilName"></p>
-        </div>
 
-        <div class="mb-3">
-            <label for="profilMail" class="label"><strong>Adresse e-mail :</strong></label>
-            <p id="profilMail"></p>
-        </div>
+    <!-- Nom du profil -->
+    <div class="bloc mb-3">
+        <h2 class="text-start fs-1">Nom de profil :</h2>
+        <p id="profilName">Chargement...</p>
+    </div>
 
-        <div class="text-center mb-3">
+    <!-- Participations -->
+    <div class="bloc" aria-labelledby="event-title">
+        <h2 id="event-title" class="text-start fs-1">Participations :</h2>
+
+        <div class="mt-3">
+            <ul class="event-list">
+                <!-- Les participations seront injectées ici par JS -->
+                <li>Chargement des participations...</li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- Boutons modifier et supprimer -->
+    <div class="bloc mt-5">
+        <div class="text-center my-3">
             <button type="button" class="btn btn-primary" id="modifyAccountBtn">Modifier mon profil</button>
-        </div>
-
-        <div class="text-center">
             <button type="button" class="btn btn-danger" id="deleteAccountBtn">Supprimer mon compte</button>
         </div>
+    </div>
 
+    <!-- Bouton déconnexion -->
     <div class="text-center mt-5">
         <button type="button" class="btn btn-primary" id="signoutBtn">Déconnexion</button>
-
+    </div>
 </div>
