suppression de lignes inutiles et révisions visuelles

--- a/public/Pages/Evenements/evenement.html
+++ b/public/Pages/Evenements/evenement.html
@@ -1,5 +1,5 @@
 <!--Image évènement-->
-<div class="mb-3 d-flex mx-auto w-75">
+<div class="bloc mb-3 d-flex mx-auto w-75">
     <img src="/Images/images event/joueuses.jpg" class=" w-100 rounded-4" style="height: 100%; object-fit: cover;"
         alt="Une joueuse accompagnée d'une autre femme au premier plan et un joueur au second">
 </div>
@@ -25,27 +25,6 @@
                         WR !
                     </p>
                 </span>
-                <span id="gameGenre">
-                    <p><strong>Genre :</strong> Action / RPG / Science-fiction</p>
-                </span>
-                <span id="gamePlatform">
-                    <p class="fs-3"><strong>Plateforme :</strong> PC / GS5 / Zbox Series</p>
-                </span>
-                <span id="gameDescription">
-                    <p><strong>Le jeu :</strong> Dans un futur lointain ravagé par la guerre entre humains et
-                        intelligences
-                        artificielles, NeaR Machinica vous plonge au cœur d’un conflit où la frontière entre l’homme et
-                        la
-                        machine n’existe plus.
-
-                        Vous incarnez Mira, une androïde de combat issue du programme NeaR, conçue pour infiltrer les
-                        bastions des IA rebelles. Accompagnée d’un drone tactique et de souvenirs fragmentés d’une vie
-                        humaine passée, Mira doit affronter des hordes mécaniques, explorer des ruines oubliées, et
-                        percer
-                        le mystère de sa propre création.</p>
-                    <span id="eventPrize">
-                        <p class="fs-2"><strong>Lot :</strong> La célébrité, à vie !</p>
-                    </span>
                     <span id="eventOrganizer">
                         <p><strong>Organisateur :</strong> xXSuperProfilXx</p>
                     </span>
@@ -60,7 +39,7 @@
 
         <!--Boutons-->
         <div class="mt-auto d-flex justify-content-center gap-4" data-show="connected">
-            <button class="btn btn-outline-light mt-2 p-4">S'inscrire</button>
+            <button class="btn btn-outline-light mt-2 p-4" id="participateBtn">Participer</button>
             <button class="btn btn-outline-light mt-2 p-4">Suivre</button>
         </div>
     </div>
