correction du lien evenement

--- a/public/Pages/home.html
+++ b/public/Pages/home.html
@@ -67,7 +67,7 @@
         <div class="col-md-6 d-flex flex-column">
             <div class="flex-grow-1">
                 <h3 class="mb-3 fs-1 text-center">
-                    <a href="/unEvenement" onclick="window.route(event)">Speedrun live NeaR Machinica</a>
+                    <a href="/evenement" onclick="window.route(event)">Speedrun live NeaR Machinica</a>
                 </h3>
             </div>
             <div class="h-100 d-flex flex-column justify-content-between" style="min-height: 400px;">
