--- a/public/Pages/rechercheEvenements.html
+++ b/public/Pages/rechercheEvenements.html
@@ -1,28 +1,8 @@
 <!--Recherche-->
 <div class="bloc d-flex flex-wrap justify-content-center gap-3 mb-5">
 
-    <!-- Barre de recherche rapide -->
-    <div class="w-100 mb-3">
-        <form id="quickSearchForm" class="d-flex justify-content-center" role="search" aria-label="Recherche rapide d'événements">
-            <div class="input-group" style="max-width: 600px;">
-                <input class="form-control form-control-lg" type="search" id="quickSearchInput" 
-                       placeholder="Recherche rapide : nom d'événement, organisateur..." />
-                <button class="btn btn-primary btn-lg" type="submit">
-                    <i class="fas fa-search"></i> Rechercher
-                </button>
-            </div>
-        </form>
-        
-        <!-- Bouton pour afficher/masquer la recherche avancée -->
-        <div class="text-center mt-2">
-            <button type="button" class="btn btn-link btn-sm" id="toggleAdvancedSearch">
-                <i class="fas fa-cog"></i> Recherche avancée
-            </button>
-        </div>
-    </div>
-
-    <!-- Recherche avancée (masquée par défaut) -->
-    <div id="advancedSearchContainer" class="w-100" style="display: none;">
+    <!-- Recherche avancée -->
+    <div id="advancedSearchContainer" class="w-100">
         <div class="row g-3">
             <!-- Recherche par nom d'évènement -->
             <div class="col-md-6 col-lg-4">
