rajout de l'adresse mail

--- a/public/Pages/monProfil.html
+++ b/public/Pages/monProfil.html
@@ -6,6 +6,12 @@
         <p id="profilName">Chargement...</p>
     </div>
 
+    <!-- Adresse email -->
+    <div class="bloc mb-3">
+        <h2 class="text-start fs-1">Adresse email :</h2>
+        <p id="profilEmail">Chargement...</p>
+    </div>
+
     <!-- Participations -->
     <div class="bloc" aria-labelledby="event-title">
         <h2 id="event-title" class="text-start fs-1">Participations :</h2>
