ajout des pages et des fonctions de recherche de profils

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,11 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/monProfil" data-show="connected"
-                                onclick="window.route(event)">Profil</a>
+                                onclick="window.route(event)">Mon Profil</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/rechercheProfils" data-show="connected"
+                                onclick="window.route(event)">Profils</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/connexion" data-show="disconnected"
