recherche et modification de profils

--- a/public/Pages/rechercheProfils.html
+++ b/public/Pages/rechercheProfils.html
@@ -28,9 +28,9 @@
                     </div>
                 </div>
 
-                <!-- Message d'information -->
-                <div id="infoMessage" class="alert alert-info text-center">
-                    Utilisez la barre de recherche pour trouver des utilisateurs.
+                <!-- Messages d'information -->
+                <div id="infoMessage" class="d-none mb-3" role="alert">
+                    <!-- Messages d'info/erreur seront affichés ici -->
                 </div>
 
                 <!-- Résultats de recherche -->
