--- a/public/Pages/home.html
+++ b/public/Pages/home.html
@@ -6,7 +6,7 @@
     </div>
 
     <!--Carousel Accueil-->
-    <div id="carouselExample" class="carousel slide">
+    <div id="carouselExample" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000">
         <div class="carousel-inner rounded-4">
             <div class="carousel-item active">
                 <img src="/Images/images accueil/groupe_jouant.jpg" class="carousel-img d-block w-100"
@@ -54,7 +54,7 @@
     <h2 id="event-title" class="text-start fs-1">Évènements en cours</h2>
 
     <!--Carrousel dynamique évènements en cours-->
-    <div id="eventCarousel" class="carousel slide">
+    <div id="eventCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
         <div class="carousel-inner event-carousel-inner" id="eventCarouselInner"></div>
         <button class="carousel-control-prev" type="button" data-bs-target="#eventCarousel" data-bs-slide="prev">
             <span class="carousel-control-prev-icon"></span>
