--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,10 @@
                             <a class="nav-link" href="/rechercheEvenements"
                                 onclick="window.route(event)">Évènements</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/contact"
+                                onclick="window.route(event)">Contact</a>
+                        </li>
                     </ul>
                 </div>
             </div>
