feat: Optimisation complète du système de participation et débogage des profils
🚀 Optimisations majeures:
- Suppression de l'entité EvenementUser (doublon avec Participation)
- Suppression du TestProtectedController (inutilisé)
- Migration des routes /api/me vers /api/users/me
- Mise à jour de tous les fichiers JavaScript

🐛 Corrections de bugs:
- Fix: Nom de profil affichait 'indisponible' -> résolu via API Platform
- Fix: Événements organisés non détectés -> utilise maintenant 'evenements' au lieu de 'evenementsOrganises'

🔧 Améliorations de la base de données:
- Suppression des relations ManyToMany conflictuelles (competitors/competitions)
- Renommage de la table 'evenements_user' en 'participations' (plus cohérent)
- Conservation des données existantes lors du renommage
- Ajout de l'entité Participation avec gestion des statuts

📁 Nouveaux fichiers:
- src/Entity/Participation.php: Nouvelle entité pour les participations avec statuts
- src/Repository/ParticipationRepository.php: Repository associé
- src/Command/DebugUserEventsCommand.php: Commande de débogage
- migrations/: Migrations pour la refactorisation de la base

✨ Le système est maintenant plus propre, plus cohérent et sans doublons!

--- a/public/Pages/contact.html
+++ b/public/Pages/contact.html
@@ -36,7 +36,7 @@
 <!--Historique entreprise-->
 <div class="text-center m-3">
     <div>
-        <p class="fs-4"> <strong>Esportify</strong> Fondée en 2018 à Paris, Esportify est une entreprise spécialisée
+        <p class="fs-4"> <strong>Esportify</strong> Fondée le 17 mars 2021 à Paris, Esportify est une entreprise spécialisée
             dans le domaine de l’e-sport professionnel et du divertissement numérique. Depuis sa création, Esportify
             s’est imposée comme un acteur majeur de la scène compétitive européenne, en bâtissant des équipes
             performantes sur des titres phares tels que BattleCore Arena, ShadowStrike Zero, et Galaxy Dominion.
