--- a/public/Pages/monProfil.html
+++ b/public/Pages/monProfil.html
@@ -24,6 +24,18 @@
         </div>
     </div>
 
+    <!-- Événements organisés (visible uniquement aux organisateurs) -->
+    <div class="bloc" id="organizedEventsSection" style="display: none;" aria-labelledby="organized-events-title">
+        <h2 id="organized-events-title" class="text-start fs-1">Événements organisés :</h2>
+
+        <div class="mt-3">
+            <ul class="organized-events-list">
+                <!-- Les événements organisés seront injectés ici par JS -->
+                <li>Chargement des événements organisés...</li>
+            </ul>
+        </div>
+    </div>
+
     <!-- Boutons modifier et supprimer -->
     <div class="bloc mt-5">
         <div class="text-center my-3">
