feat(frontend): implémenter interface "Démarrer l'événement"
- Ajouter bouton "Démarrer l'événement" pour organisateurs/admins
- Créer fonction startEvent() avec authentification X-AUTH-TOKEN
- Implémenter dialog de confirmation avant démarrage
- Ajouter système de notifications avec showNotification()
- Gestion d'erreurs et rechargement automatique après succès
- Affichage conditionnel selon statut et permissions

--- a/public/Pages/evenement.html
+++ b/public/Pages/evenement.html
@@ -50,6 +50,9 @@
             <a href="/modifierEvenement" onclick="window.route(event)" class="btn btn-warning px-4 py-2" id="editEventBtn">
                 <i class="fas fa-edit me-2"></i>Modifier l'événement
             </a>
+            <button class="btn btn-success px-4 py-2" id="startEventBtn" style="display: none;" onclick="startEvent()">
+                <i class="fas fa-play me-2"></i>Démarrer l'événement
+            </button>
         </div>
         
         <!--Boutons Admin (validation) - masqués par défaut-->
