✨ Frontend (HTML): - Ajouter bouton 'Rejoindre l'événement' avec icône - Style cohérent avec autres boutons (mt-2 p-4) - Bouton masqué par défaut, affiché conditionnellement
🚀 Backend (API):
- Nouvelle route POST /api/evenements/{id}/rejoindre
- Validation: événement démarré + participation validée
- Documentation OpenAPI complète
- Gestion erreurs 400/403 avec messages explicites
- Structure extensible pour logique métier future

--- a/public/Pages/evenement.html
+++ b/public/Pages/evenement.html
@@ -43,6 +43,9 @@
         <!--Boutons-->
         <div class="mt-auto d-flex justify-content-center gap-4" data-show="connected">
             <button class="btn btn-outline-light mt-2 p-4" id="participateBtn">Participer</button>
+            <button class="btn btn-primary mt-2 p-4" id="joinEventBtn" style="display: none;" onclick="joinEvent()">
+                <i class="fas fa-sign-in-alt me-2"></i>Rejoindre l'événement
+            </button>
         </div>
 
         <!--Boutons Organisateur/Admin - masqués par défaut-->
