Frontend: Corriger l'affichage des événements organisés en tableau
- Correction des propriétés dateDebut/dateFin dans monProfil.js
- Mise à jour de la structure HTML pour les tableaux
- Amélioration de la présentation des données d'événements organisés
- Fix des références JavaScript pour correspondre à l'API

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
             <div class="container-fluid">
 
                 <!--Logo-Lien-->
-                <a class="navbar-brand fs-1 fw-bold" href="/contact" onclick="window.route(event)">ESPORTIFY</a>
+                <a class="navbar-brand fs-1 fw-bold">ESPORTIFY</a>
 
                 <!--Bouton Menu Burger-->
                 <button class="navbar-toggler rounded-3" type="button" data-bs-toggle="collapse"
