"feat: Intégration de la gestion avancée d'images dans creationEvenement
- Ajout de la gestion avancée des images de modifierEvenement vers creationEvenement
- Suppression du message 'Aucune image sélectionnée' dans les deux pages

--- a/public/Pages/modifierEvenement.html
+++ b/public/Pages/modifierEvenement.html
@@ -43,7 +43,7 @@
 
                     <!-- Image de l'événement -->
                     <div class="mb-4">
-                        <label class="form-label">
+                        <label class="form-label" for="imageManagementArea">
                             <i class="fas fa-image me-2"></i>Images de l'événement
                         </label>
                         
@@ -94,13 +94,6 @@
                         
                         <!-- Zone de prévisualisation et gestion des images -->
                         <div id="imageManagementArea" class="border rounded p-3" style="min-height: 100px; background-color: #f8f9fa;">
-                            <div class="d-flex align-items-center justify-content-center text-muted" id="noImagesMessage">
-                                <div class="text-center">
-                                    <i class="fas fa-images fa-2x mb-2 opacity-50"></i>
-                                    <p class="mb-0">Aucune image sélectionnée</p>
-                                    <small>Les images ajoutées apparaîtront ici avec leurs options</small>
-                                </div>
-                            </div>
                             <div id="imagesList" class="row g-3"></div>
                         </div>
                     </div>
