--- a/public/Pages/rechercheEvenements.html
+++ b/public/Pages/rechercheEvenements.html
@@ -16,6 +16,18 @@
                 </form>
             </div>
 
+            <!--Recherche organisateur-->
+            <div class="col-md-6 col-lg-4">
+                <form id="searchEventOrganizer" role="search" aria-label="Recherche par organisateur">
+                    <label for="organizerName" class="form-label">Nom de l'organisateur</label>
+                    <div class="input-group">
+                        <input class="form-control" type="search" id="organizerName" name="organizerName"
+                            placeholder="Rechercher un organisateur" />
+                        <button class="btn btn-outline-success" type="submit">Valider</button>
+                    </div>
+                </form>
+            </div>
+
             <!-- Recherche par nombre de participants -->
             <div class="col-md-6 col-lg-4">
                 <form id="searchEventNumberCompetitors" role="search" aria-label="Recherche par nombre de participants">
