--- a/public/Pages/monProfil.html
+++ b/public/Pages/monProfil.html
@@ -41,6 +41,23 @@
         </div>
     </div>
 
+    <!-- Événements en attente (visible uniquement aux administrateurs) -->
+    <div class="bloc" id="pendingEventsSection" style="display: none;" aria-labelledby="pending-events-title">
+        <div class="d-flex justify-content-between align-items-center mb-3">
+            <h2 id="pending-events-title" class="text-start fs-1 mb-0">
+                Événements en attente de validation :
+            </h2>
+            <span class="badge bg-warning text-dark fs-6" id="pendingEventsCount">0</span>
+        </div>
+
+        <div class="mt-3">
+            <ul class="pending-events-list">
+                <!-- Les événements en attente seront injectés ici par JS -->
+                <li>Chargement des événements en attente...</li>
+            </ul>
+        </div>
+    </div>
+
     <!-- Boutons modifier et supprimer -->
     <div class="bloc mt-5">
         <div class="text-center my-3">
