ajout de placeholder contacts

--- a/public/Pages/contact.html
+++ b/public/Pages/contact.html
@@ -1,6 +1,5 @@
 <!--Carousel-->
 <div class="bloc" aria-labelledby="home-title">
-
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner rounded-4">
             <div class="carousel-item active">
@@ -50,3 +49,154 @@
             jeunes talents de l’e-sport.</p>
     </div>
 </div>
+<!--Section Contact-->
+<div class="container my-5">
+    <div class="row">
+        <div class="col-lg-8 mx-auto">
+            <h2 class="text-center mb-4">
+                <i class="fas fa-envelope me-2 text-primary"></i>
+                Contactez-nous
+            </h2>
+            
+            <div class="row g-4">
+                <!-- Informations de contact -->
+                <div class="col-md-6">
+                    <div class="card h-100 shadow-sm">
+                        <div class="card-body">
+                            <h5 class="card-title text-primary">
+                                <i class="fas fa-building me-2"></i>
+                                Siège Social
+                            </h5>
+                            <p class="card-text">
+                                <strong>Esportify France SAS</strong><br>
+                                42 Avenue des Champs-Élysées<br>
+                                75008 Paris, France
+                            </p>
+                            <p class="card-text">
+                                <i class="fas fa-phone me-2 text-success"></i>
+                                <strong>Tél :</strong> +33 (0)1 42 68 75 30<br>
+                                <i class="fas fa-envelope me-2 text-info"></i>
+                                <strong>Email :</strong> contact@esportify.fr
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Contacts départements -->
+            <div class="row g-4 mt-4">
+                <div class="col-12">
+                    <h4 class="text-center mb-4">Contacts</h4>
+                </div>
+                
+                <div class="col-lg-4 col-md-6">
+                    <div class="card text-center shadow-sm">
+                        <div class="card-body">
+                            <div class="mb-3">
+                                <i class="fas fa-trophy fa-2x text-warning"></i>
+                            </div>
+                            <h6 class="card-title">Équipes & Compétitions</h6>
+                            <p class="card-text small">
+                                <i class="fas fa-envelope me-1"></i> equipes@esportify.fr<br>
+                                <i class="fas fa-phone me-1"></i> +33 1 42 68 75 31
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="card text-center shadow-sm">
+                        <div class="card-body">
+                            <div class="mb-3">
+                                <i class="fas fa-handshake fa-2x text-success"></i>
+                            </div>
+                            <h6 class="card-title">Partenariats & Sponsors</h6>
+                            <p class="card-text small">
+                                <i class="fas fa-envelope me-1"></i> partenariats@esportify.fr<br>
+                                <i class="fas fa-phone me-1"></i> +33 1 42 68 75 32
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <div class="card text-center shadow-sm">
+                        <div class="card-body">
+                            <div class="mb-3">
+                                <i class="fas fa-graduation-cap fa-2x text-info"></i>
+                            </div>
+                            <h6 class="card-title">Académie & Formation</h6>
+                            <p class="card-text small">
+                                <i class="fas fa-envelope me-1"></i> academie@esportify.fr<br>
+                                <i class="fas fa-phone me-1"></i> +33 1 42 68 75 33
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 mx-auto">
+                    <div class="card text-center shadow-sm">
+                        <div class="card-body">
+                            <div class="mb-3">
+                                <i class="fas fa-headset fa-2x text-primary"></i>
+                            </div>
+                            <h6 class="card-title">Support Technique</h6>
+                            <p class="card-text small">
+                                <i class="fas fa-envelope me-1"></i> support@esportify.fr<br>
+                                <i class="fas fa-phone me-1"></i> +33 1 42 68 75 34
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 mx-auto">
+                    <div class="card text-center shadow-sm">
+                        <div class="card-body">
+                            <div class="mb-3">
+                                <i class="fas fa-newspaper fa-2x text-danger"></i>
+                            </div>
+                            <h6 class="card-title">Relations Presse</h6>
+                            <p class="card-text small">
+                                <i class="fas fa-envelope me-1"></i> presse@esportify.fr<br>
+                                <i class="fas fa-phone me-1"></i> +33 1 42 68 75 35
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Réseaux sociaux -->
+            <div class="row mt-5">
+                <div class="col-12">
+                    <div class="card shadow-sm">
+                        <div class="card-body text-center">
+                            <h5 class="card-title mb-4">Suivez-nous sur les réseaux sociaux</h5>
+                            <div class="d-flex justify-content-center gap-4">
+                                <a href="#" class="text-decoration-none">
+                                    <i class="fab fa-twitter fa-2x text-info"></i>
+                                    <div class="small mt-1">@EsportifyFR</div>
+                                </a>
+                                <a href="#" class="text-decoration-none">
+                                    <i class="fab fa-instagram fa-2x text-danger"></i>
+                                    <div class="small mt-1">@esportify_official</div>
+                                </a>
+                                <a href="#" class="text-decoration-none">
+                                    <i class="fab fa-youtube fa-2x text-danger"></i>
+                                    <div class="small mt-1">Esportify Gaming</div>
+                                </a>
+                                <a href="#" class="text-decoration-none">
+                                    <i class="fab fa-twitch fa-2x text-purple"></i>
+                                    <div class="small mt-1">EsportifyLive</div>
+                                </a>
+                                <a href="#" class="text-decoration-none">
+                                    <i class="fab fa-discord fa-2x text-primary"></i>
+                                    <div class="small mt-1">Discord Esportify</div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>ome-title">
