--- a/public/Pages/contact.html
+++ b/public/Pages/contact.html
@@ -35,7 +35,7 @@
 <!--Historique entreprise-->
 <div class="text-center m-3">
     <div>
-        <p class="fs-4"> <strong>Esportify</strong> Fondée le 17 mars 2021 à Paris, Esportify est une entreprise spécialisée
+        <p class="fs-4">Fondée le 17 mars 2021 à Paris, Esportify est une entreprise spécialisée
             dans le domaine de l’e-sport professionnel et du divertissement numérique. Depuis sa création, Esportify
             s’est imposée comme un acteur majeur de la scène compétitive européenne, en bâtissant des équipes
             performantes sur des titres phares tels que BattleCore Arena, ShadowStrike Zero, et Galaxy Dominion.
@@ -85,10 +85,6 @@
 
             <!-- Contacts départements -->
             <div class="row g-4 mt-4">
-                <div class="col-12">
-                    <h4 class="text-center mb-4">Contacts</h4>
-                </div>
-                
                 <div class="col-lg-4 col-md-6">
                     <div class="card text-center shadow-sm">
                         <div class="card-body">
